// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should render the component in closed state 1`] = `
<div
  className="sidebar "
>
  <nav
    className="nav"
  >
    <li
      key="Dashboard_0"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/dashboard"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-dashboard icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Dashboard
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Layouts_1"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/layouts"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-layouts icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Layouts
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Graphs_2"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/graphs"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-graphs icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Graphs
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Mailbox_3"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/mailbox"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-mailbox icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Mailbox
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Metrics_4"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/metrics"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-metrics icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Metrics
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Widgets_5"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/widgets"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-widgets icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Widgets
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Forms_6"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/forms"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-forms icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Forms
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="App Views_7"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/app-views"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-app-views icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            App Views
          </span>
        </div>
      </NavLink>
    </li>
  </nav>
</div>
`;

exports[`Sidebar should render the component in open state 1`] = `
<div
  className="sidebar sidebarOpen"
>
  <nav
    className="nav"
  >
    <li
      key="Dashboard_0"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/dashboard"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-dashboard icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Dashboard
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Layouts_1"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/layouts"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-layouts icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Layouts
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Graphs_2"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/graphs"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-graphs icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Graphs
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Mailbox_3"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/mailbox"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-mailbox icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Mailbox
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Metrics_4"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/metrics"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-metrics icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Metrics
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Widgets_5"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/widgets"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-widgets icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Widgets
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="Forms_6"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/forms"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-forms icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            Forms
          </span>
        </div>
      </NavLink>
    </li>
    <li
      key="App Views_7"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="link"
        to="/app-views"
      >
        <div
          className="linkIcon"
        >
          <i
            className="icon icon-app-views icon"
          />
        </div>
        <div
          className="linkContent"
        >
          <span>
            App Views
          </span>
        </div>
      </NavLink>
    </li>
  </nav>
</div>
`;
